test/elaboration/bad/coreml_lambda.mle
let (id : int) = 0 (fun (x : int) -> 42)